--- a/html/css/style.css
+++ b/html/css/style.css
@@ -63,9 +63,9 @@ body {
 }
 
 .progress-bar {
-    background: #eda01a;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #eda01a, #ffd8d8);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #eda01a, #ffd8d8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */	
+    background: #00ffdd;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #00ffdd, #ffd8d8);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #00ffdd, #ffd8d8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */	
     width: 0%;
     height: 4vh;
     transition: width 0.3s;
